# src/api/dto/post.go
@@ -7,3 +7,8 @@ type CategoryCreate struct {
 type CategoryUpdate struct {
 	Name string `json:"name" validate:"required,min=3,max=64"`
 }
+
+type CategoryOutput struct {
+	Id   int    `json:"id"`
+	Name string `json:"name"`
+}
